YUK-15871 Improve Recent Events Popup UI - aligned check boxes and standardized spacing - fixed trends popup which had same issue

--- a/yukon-client/yukon-web/src/com/cannontech/web/common/resources/yukon.less
+++ b/yukon-client/yukon-web/src/com/cannontech/web/common/resources/yukon.less
@@ -515,6 +515,10 @@ table.matrix{
     border-bottom: 1px solid #908e8e;
 }
 
+.dpt{
+    padding-left: 4.2px;
+    padding-right: 4.2px;
+}
 /* Header row matches section containers */
 .section-table thead th {
   padding-top: 5px;
